fixed table shadow
shadow was not aligned with right-most end of tables. this fixed it

--- a/themes/hugo-theme-even/assets/sass/_partial/_post/_content.scss
+++ b/themes/hugo-theme-even/assets/sass/_partial/_post/_content.scss
@@ -75,7 +75,7 @@
     overflow-x: auto;
 
     > table {
-      max-width: 100%;
+      max-width: auto;
       margin: 10px 0;
       border-spacing: 0;
       box-shadow: 2px 2px 3px rgba(0,0,0,.125);
